Add hummus photo, ingredients and steps
Add an image of hummus, an unordered list of ingredients needed on the recipe and the steps of the recipe

--- a/recipes/hummus.html
+++ b/recipes/hummus.html
@@ -5,6 +5,29 @@
         <meta charset="utf-8">
     </head>
     <body>
-        
+        <h1>Easy Hummus (Better Than Store-Bought)</h1>
+        <img src="img/hummus.jpeg" alt="Perfectly flavored hummus, jordan style">
+        <p><small>Perfectly flavored hummus, jordan style</small></p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Chickpeas (or garbanzo beans)</li>
+            <li>Tahini</li>
+            <li>Fresh lemon juice</li>
+            <li>Fresh garlic</li>
+            <li>Ground cumin and salt</li>
+            <li>Olive oil</li>
+            <li>Roasted Red Peppers</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Tahini and lemon juice go in first.</li>
+            <li>Then before you add anything else, turn on the food processor 
+                and let it run for a minute or so.</li>
+            <li>From here, you can add ingredients as you will, but make sure 
+                you stand back and let that food processor run — we’re talking 
+                a minute of running after adding each ingredient.</li>
+            <li>Cold water (or aquafaba — explained below) is our last trick 
+                for fluffy, creamy, whipped hummus.</li>
+        </ul>
     </body>
 </html>
