--- a/recipes/hummus.html
+++ b/recipes/hummus.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Easy Hummus (Better Than Store-Bought)</h1>
-        <img src="img/hummus.jpeg" alt="Perfectly flavored hummus, jordan style">
+        <img src="img/hummus.jpg" alt="Perfectly flavored hummus, jordan style">
         <p><small>Perfectly flavored hummus, jordan style</small></p>
         <h3>Ingredients</h3>
         <ul>
