--- a/recipes/hummus.html
+++ b/recipes/hummus.html
@@ -29,5 +29,6 @@
             <li>Cold water (or aquafaba — explained below) is our last trick 
                 for fluffy, creamy, whipped hummus.</li>
         </ul>
+        <a href="../index.html"><small>Return to home</small></a>
     </body>
 </html>
