Add cheesecake iimg and path on it's html file

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Classic Cheesecake Recipe</h1>
-        <img src="../img/hummus.jpg" alt="Perfectly flavored hummus, jordan style">
+        <img src="../img/cheesecake.jpg" alt="Perfectly flavored hummus, jordan style">
         <p><small>Delicious looking cheesecake</small></p>
         <h3>Ingredients</h3>
         <ul>
