--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/hummus.html">Delicious Hummus</a></li>
+            <li><a href="recipes/cheesecake.html">Great Looking Cheesecake</a></li>
+        </ul>
     </body>
 </html>
